Import of INGY/Cog-0.07 from CPAN.
gitpan-cpan-distribution: Cog
gitpan-cpan-version:      0.07
gitpan-cpan-path:         INGY/Cog-0.07.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/share/template/site-navigation.html.tt
+++ b/share/template/site-navigation.html.tt
@@ -9,9 +9,9 @@
 [% SET url = elem.1 %]
 [% SET sublist = elem.2 %]
 [% IF url.search("") %]
-  <li><a href="[% base_url %][% url %]" class="[% label | lower %]">[% label %]</a>
+  <li><a href="[% base_url %][% url %]" class="[% label.replace('&nbsp;', ' ') | lower %]">[% label %]</a>
 [%- ELSE -%]
-  <li><a href="[% url.0 %]" class="_navigate [% label | lower %]">[% label %]</a>
+  <li><a href="[% url.0 %]" class="_navigate [% label.replace('&nbsp;', ' ') | lower %]">[% label %]</a>
 [%- END -%]
 [% IF sublist %]
 [% INCLUDE nav_list nav=sublist %]
